
	- use _WIN32, not WIN32, when testing for windows (fails with bcc),
          patch by Tamas Tevesz.

3.6  Mon Feb  7 17:37:31 CET 2011
	- fixed hash calculation in C♯ version (Tiago Freitas Leal).
        - unroll copy for small sizes, use memcpy for larger sizes,
          greatly speeding up decompression in most cases.
        - finally disable rep movsb - it's a big loss on modern intel cpus,
          and only a small win on amd cpus.
        - improve C++ compatibility of the code.
        - slightly improve compressor speed.
        - halved memory requirements for compressor on 64 bit architectures,
          which can improve the speed quite a bit on older cpus.

3.5  Fri May  1 02:28:42 CEST 2009
	- lzf_compress did sometimes write one octet past the given output
          buffer (analyzed and nice testcase by Salvatore Sanfilippo).

3.4  Tue Sep  2 06:45:00 CEST 2008
	- the fix from 3.3 introduced a compression bug, which is fixed in
          this release (which explains the mysterious prerelease...). Thanks
          once more to Clément Calmels.

3.3  Mon Aug 25 03:17:42 CEST 2008
	- lzf_compress could access memory after the given input buffer
          when outputting back references. reported with nice testcase
          by Clément Calmels.

3.2  Fri May  9 18:52:23 CEST 2008
	- include a workaround for failing POSIX and real-world compliance
          on 64 bit windows (microsoft claims to support POSIX, but is far
          from it). (bug found and analysed nicely by John Lilley).

3.1  Fri Nov 30 11:33:04 CET 2007
	- IMPORTANT BUGFIX: a too long final literal run would corrupt data
          in the encoder (this was introduced in 3.0 only, earlier versions
          are safe).

3.0  Tue Nov 13 22:13:09 CET 2007
	- switched to 2-clause bsd with "GPL v2 or any later version" option.
        - speed up compression by ~10-15% in common cases
          by some manual unrolling.